--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -241,7 +241,10 @@
     </Compile>
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\BankAccount.cs" />
+    <Compile Include="Models\BankCustomer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
+    <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
     <Compile Include="Results\ChallengeResult.cs" />
