--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -246,10 +246,15 @@
     <Compile Include="Migrations\201805151035153_initial.Designer.cs">
       <DependentUpon>201805151035153_initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805151244141_updated.cs" />
+    <Compile Include="Migrations\201805151244141_updated.Designer.cs">
+      <DependentUpon>201805151244141_updated.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BankAccount.cs" />
+    <Compile Include="Models\BankAccountDTO.cs" />
     <Compile Include="Models\BankCustomer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Transaction.cs" />
@@ -352,6 +357,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201805151035153_initial.resx">
       <DependentUpon>201805151035153_initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805151244141_updated.resx">
+      <DependentUpon>201805151244141_updated.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
