--- a/PWApi/Web.config
+++ b/PWApi/Web.config
@@ -11,7 +11,7 @@
       requirePermission="false"/>
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\PWApi.mdf;Initial Catalog=PWApi;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\PWApiDB.mdf;Initial Catalog=PWApiDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings></appSettings>
