--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -250,6 +250,10 @@
     <Compile Include="Migrations\201805160740348_changeFK.Designer.cs">
       <DependentUpon>201805160740348_changeFK.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805160752133_changeFKOneMoreTime.cs" />
+    <Compile Include="Migrations\201805160752133_changeFKOneMoreTime.Designer.cs">
+      <DependentUpon>201805160752133_changeFKOneMoreTime.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -363,6 +367,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805160740348_changeFK.resx">
       <DependentUpon>201805160740348_changeFK.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160752133_changeFKOneMoreTime.resx">
+      <DependentUpon>201805160752133_changeFKOneMoreTime.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
