--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -235,7 +235,6 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BankAccountsController.cs" />
-    <Compile Include="Controllers\BankCustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -263,8 +262,8 @@
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BankAccount.cs" />
     <Compile Include="Models\BankAccountDTO.cs" />
-    <Compile Include="Models\BankCustomer.cs" />
-    <Compile Include="Models\BankCustomerDTO.cs" />
+    <Compile Include="Models\Client.cs" />
+    <Compile Include="Models\ClientDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
