--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -235,6 +235,7 @@
     <Compile Include="Areas\HelpPage\XmlDocumentationProvider.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BankAccountsController.cs" />
+    <Compile Include="Controllers\ClientsController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
@@ -257,13 +258,17 @@
     <Compile Include="Migrations\201805160759536_changeEntName.Designer.cs">
       <DependentUpon>201805160759536_changeEntName.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201805160827478_somechanges.cs" />
+    <Compile Include="Migrations\201805160827478_somechanges.Designer.cs">
+      <DependentUpon>201805160827478_somechanges.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountBindingModels.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\BankAccount.cs" />
-    <Compile Include="Models\BankAccountDTO.cs" />
+    <Compile Include="DTO\BankAccountDTO.cs" />
     <Compile Include="Models\Client.cs" />
-    <Compile Include="Models\ClientDTO.cs" />
+    <Compile Include="DTO\ClientDTO.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\Transaction.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -376,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201805160759536_changeEntName.resx">
       <DependentUpon>201805160759536_changeEntName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201805160827478_somechanges.resx">
+      <DependentUpon>201805160827478_somechanges.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
