--- a/PWApi/PWApi.csproj
+++ b/PWApi/PWApi.csproj
@@ -239,7 +239,7 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\TransactionsController.cs" />
     <Compile Include="Controllers\ValuesController.cs" />
-    <Compile Include="DTO\TransactionsDTO.cs" />
+    <Compile Include="DTO\TransactionDTO.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
